Ctualización del index

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         
         <section id="noticias">
-            <h2>&lt;Nuevos Bits&gt; Últimas Noticias</h2>
+            <h2>Nuevos Bits: Últimas Noticias</h2>
             
             <article>
                 <h3>El ultimo lanzamiento indie</h3>
@@ -48,7 +48,7 @@
             <article>
                 <h3>Entrevista exclusiva con el creador de "Starbound Dreams"</h3>
                 <p>Hablamos con el desarrollador solitario detrás del RPG que ha redefinido la simulación espacial. Descubre los retos de programar solo y el futuro de su universo indie.</p>
-                <p>— Por: Diego Posada</p>
+                <p>— Por: Diego Posada y Ever Palomo</p>
             </article>
 
             <div class="button-container">
@@ -89,11 +89,11 @@
                         <td class="score">10/10</td>
                     </tr>
                     <tr>
-                        <td>Hollow Knight</td>
+                        <td>Hollow Knight: silksong</td>
                         <td>Metroidvania</td>
                         <td>PC, Switch, Consolas</td>
                         <td>Team Cherry</td>
-                        <td class="score">9.5/10</td>
+                        <td class="score">9.1/10</td>
                     </tr>
                 </tbody>
             </table>
@@ -107,7 +107,7 @@
             <article class="multimedia-content">
                 <h3>Trailer: Hollow knight silksong</h3>
                 <div class="video-responsive">
-                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=kPkGpsc3ALY" title="YouTube video player (Indie Trailer Placeholder)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                   <iframe width="560" height="315" src="https://www.youtube.com/embed/6XGeJwsUP9c?si=kqg2gJbqq1q-90ma" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <p>Ingresa a los confines de Telalejana y descubre sus maravillas</p>
             </article>
